--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@radix-ui/react-aspect-ratio": "^1.1.8",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@sanity/vision": "^4.21.1",
+    "@vercel/og": "^0.8.5",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
+    "blurhash": "^2.0.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
@@ -19,10 +25,13 @@
     "mongoose": "^9.0.0",
     "next": "16.0.4",
     "next-auth": "^4.24.13",
+    "nodemailer": "^7.0.11",
+    "notistack": "^3.0.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
     "react-icons": "^5.5.0",
+    "react-turnstile": "^1.1.4",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
